# greythr-automation

./: .env.template  .gitignore  README.md  app.py  pyproject.toml  t.py
api/exceptions/: __init__.py
api/exceptions/handler/: __init__.py
api/model/: employee.py
api/modules/: logger.py
api/routes/: __init__.py  employees.py  helper.py  monitor.py
api/schedulers/: auto_sign.py
api/schema/: validation.py
api/service/: auth.py  employee.py  greythr_automation.py  helper.py
config/: __init__.py
migrations/versions/: 3b25a1c22fae_added_password_hash.py
scripts/: add_password_hash.py
